--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ input[type="text"] {
   border: 2px solid #858299;
   height: 50px;
   padding: 10px;
+  font-weight: 700;
 }
 input[type="text"]:focus {
   background-color: #3d4153;
